# satin_board

./: .gitignore  README.md
hardware/: README.md
hardware/schematic/connector_board/bom/: CarteConnecteur.csv
hardware/schematic/connector_board/gerbers/: CarteConnecteur-B.Cu.gbl  CarteConnecteur-B.Mask.gbs  CarteConnecteur-B.Paste.gbp  CarteConnecteur-B.SilkS.gbo  CarteConnecteur-Edge.Cuts.gm1  CarteConnecteur-F.Cu.gtl  CarteConnecteur-F.Mask.gts  CarteConnecteur-F.Paste.gtp  CarteConnecteur-F.SilkS.gto  CarteConnecteur.drl
hardware/schematic/connector_board/kicad/: CarteConnecteur-cache.lib  CarteConnecteur-rescue.lib  CarteConnecteur.kicad_pcb  CarteConnecteur.net  CarteConnecteur.pro  CarteConnecteur.sch
hardware/schematic/mainboard/bom/: MPE_BOARD.ods
hardware/schematic/mainboard/gerbers/: MPE_BOARD-B.Cu.gbl  MPE_BOARD-B.Mask.gbs  MPE_BOARD-B.Paste.gbp  MPE_BOARD-B.SilkS.gbo  MPE_BOARD-Edge.Cuts.gm1  MPE_BOARD-F.Cu.gtl  MPE_BOARD-F.Mask.gts  MPE_BOARD-F.Paste.gtp  MPE_BOARD-F.SilkS.gto  MPE_BOARD.drl
software/: .gitignore
software/SDK/satin-hal/: Cargo.toml  README.md
software/SDK/satin-hal/src/: dac.rs  lib.rs
software/applications/mpe_cv_converter/: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x
software/applications/mpe_cv_converter/.cargo/: config
software/applications/mpe_cv_converter/src/: dac.rs  ex_baseline.rs  ex_init.rs  ex_interrupt.rs  main (autre copie).rs  main (copie).rs  main.rs  main.rs_alone.rs  main.rtfm1.rs  main.rtfm2.rs  main_base (copie).rs  main_base.rs  main_blink.rs  main_rtfmvmaster.rs  main_test_spi.rs  midi.rs  satinboard.rs  schedule.rs
software/applications/satinapi/: .gitignore  Cargo.toml  README.md
software/applications/satinapi/src/: cv.rs  lib.rs  midi.rs  mpe.rs
software/applications/test_midi/: Cargo.toml  dump.txt
software/applications/test_midi/src/: main.rs
software/firmware/: README.md
