[package]
authors = ["musitdev <philippe.delrieu@free.fr>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the Satin board"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32f7xx", "hal"]
license = "MIT OR Apache-2.0"
name = "satin-hal"
version = "0.1.0"

[dependencies]

[dependencies.stm32f7xx-hal]
stm32f7xx-hal = "0.1.0"
features = ["stm32f746","rt"]

[dependencies.stm32f7]
version = "0.8.0"
features = ["stm32f7x6", "rt"]


[features]


