[package]
authors = ["musitdev <philippe.delrieu@free.fr>"]
edition = "2018"
readme = "README.md"
name = "mpecvconver"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
panic-halt = "0.2.0"
nb = "0.1.1"
#cortex-m-rtfm = "0.4.3"
#stm32f7 = "0.5.0"
panic-semihosting = "0.5.1"
cortex-m-semihosting = "0.3.2"
heapless = "0.4.1"
#owned-singleton = "0.1.0"
arraydeque = { version = "0.4", default-features = false }

[dependencies.cortex-m-rtfm]
#version = "0.4.3"
path="../../../../cortex-m-rtfm"
features = ["timer-queue"]

[dependencies.stm32f7]
#path="../stm32-rs/stm32f7"
version = "0.6.0"
features = ["stm32f7x6", "rt"]

[dependencies.satinapi]
path="../satinapi"
version = "0.1.0"

[dependencies.bare-metal]
version = "0.2.4"
features = ["const-fn"]

[dependencies.stm32f7xx-hal]
#git = "https://github.com/mvertescher/stm32f7xx-hal"
#path="../../SDK/stm32f7xx-hal"
path="../../../../stm32f7xx-hal"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"

[features]
default=["rt", "stm32f746", "timer-queue"]
rt = ["stm32f7/rt"]
stm32f746 = ["stm32f7/stm32f7x6", "stm32f7xx-hal/stm32f746"]
timer-queue=["cortex-m-rtfm/timer-queue"]
#"cortex-m-rtfm/timer-queue"

#[dependencies.stm32f7x6]
#path="../stm32f7x6"
#features = ["rt"]

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "mpecvconver"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
